01/10/2024:
	- Added check for tile byte size when passing through pre-encoded JPEG tiles for TIFF as these can occasionally
	  be larger than the byte size of raw data.


25/09/2024:
	- Added support for directly reading standard JPEG input images. Implementation uses libjpeg's partial decoding
	  and DCT-scaling functions to optimize decoding as much as is possible and supports ICC, XMP and EXIF metadata.
	  Note that JPEG does not support multi-resolution encoding, so decoding will be slower than reading TIFF
	  or JPEG2000, especially for large images.


24/09/2024:
	- Added TIFF codec version reporting in logfile and updated return signature for getCodecVersion() function.
	  Also code cleanups for OpenJPEGImage and KakaduImage classes.


13/09/2024:
	- Updated XYZ to sRGB conversion matrix to use that in the official IEC 61966-2-1 specification


06/09/2024:
	- Added extra URL decoding to ID field for IIIF's info.json. Fixes https://github.com/ruven/iipsrv/issues/270


05/09/2024:
	- Added convenience function to Rawtile class to duplicate bands for encoders that cannot natively handle
	  single band monochrome images: simplifies WebP encoding.
	- Added AVIF output support. Both tile and region output are supported for both IIP and IIIF. Individual tiles
	  can be requested using the ATL paramter which works in the same way as PTL for PNG and JTL for JPEG. CVT
	  region requests can be made with CVT=avif. AVIF encoder supports alpha channels and 8 bit images only at the
	  moment (avif supports up to 12 bit). To compile, iipsrv requires the libavif development headers and libraries,
	  which are automatically detected in ./configure. libavif itself will require at least one encoder codec enabled.
	  The AVIF_QUALITY startup variable sets the default encoding quality (0=most compression, 100=best quality,
	  default=50), -1 specifies lossless encoding. The AVIF_CODEC variable allows selection of the libavif codec